Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" />https://learn.co/tracks/full-stack-web-development-v8/module-14-front-end-web-programming-in-javascript/section-4-communication-with-the-server/toy-tale-challenge#
     <title>Toy Tale</title>
     <script type="text/javascript" src="src/index.js"></script>
     <link rel="stylesheet" href="index.css" />
